@@ -1,5 +1,11 @@
 2016-03-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* src/jtag2prog.cc (jtag2::eraseProgramMemory): bail out if
+	running on debugWIRE
+	* src/jtag3prog.cc (jtag3::eraseProgramMemory): (Dito.)
+
+2016-03-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* src/jtag2rw.cc(jtag2::jtagWrite): omit chip erase when
 	operating on debugWIRE
 	* src/jtag3rw.cc(jtag3::jtagWrite): (Dito.)
